--- a/styles/sass/_components.global-header.scss
+++ b/styles/sass/_components.global-header.scss
@@ -8,6 +8,23 @@ $header-height: 85px;
   min-height: $header-height;
   z-index: map-get($zindex, header);
   border-bottom: 1px solid $color-dark-tertiary;
+  background-image: linear-gradient(-270deg, $color-dark-secondary 0%, $color-dark-secondary 10%, rgba($color-dark-secondary,0) 10%, rgba($color-dark-secondary,0) 90%, $color-dark-secondary 90%, $color-dark-secondary 100%);
+
+  @include mq(1480) {
+    background-image: linear-gradient(-270deg, $color-dark-secondary 0%, $color-dark-secondary 10%, rgba($color-dark-secondary,0) 10%, rgba($color-dark-secondary,0) 90%, $color-dark-secondary 90%, $color-dark-secondary 100%);
+  }
+
+  @include mq(1770) {
+    background-image: linear-gradient(-270deg, $color-dark-secondary 0%, $color-dark-secondary 20%, rgba($color-dark-secondary,0) 20%, rgba($color-dark-secondary,0) 80%, $color-dark-secondary 80%, $color-dark-secondary 100%);
+  }
+
+  @include mq(2380) {
+    background-image: linear-gradient(-270deg, $color-dark-secondary 0%, $color-dark-secondary 25%, rgba($color-dark-secondary,0) 25%, rgba($color-dark-secondary,0) 75%, $color-dark-secondary 75%, $color-dark-secondary 100%);
+  }
+
+  @include mq(2850) {
+    background-image: linear-gradient(-270deg, $color-dark-secondary 0%, $color-dark-secondary 30%, rgba($color-dark-secondary,0) 30%, rgba($color-dark-secondary,0) 70%, $color-dark-secondary 70%, $color-dark-secondary 100%);
+  }
 
   > .wrap {
     display: flex;
@@ -23,7 +40,7 @@ $header-height: 85px;
 
 .global-header__left {
   background-color: $color-dark-secondary;
-  box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.50);
+  // box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.50);
   z-index: 10;
   justify-content: flex-end;
   padding-right: 10px;
@@ -38,22 +55,25 @@ $header-height: 85px;
     flex: 1 0 15%;
   }
 
-  &:before {
-    content:'';
-    display: block;
-    background-color: $color-dark-secondary;
-    width: 100%;
-    top: 0;
-    height: $header-height;
-    position: absolute;
-    left: -100%;
-    margin-left: $gutter;
-  }
+  // &:before {
+  //   content:'';
+  //   display: block;
+  //   background-color: $color-dark-secondary;
+  //   width: calc( ( 100vw - 1440px ) / 2 );
+  //   top: 0;
+  //   height: $header-height;
+  //   position: absolute;
+  //   left: calc( ( 100vw - 1440px ) / -2 );
+  //   margin-left: $gutter;
+  // }
 }
 
 .global-header__center {
   background-color: rgba($color-dark-secondary,.85);
   justify-content: center;
+  box-shadow: inset 10px 0px 10px -5px rgba(0,0,0,0.50),
+              inset -10px 0px 10px -5px rgba(0,0,0,0.50);
+
 
   flex: 1 0 30%;
   @include mq(860) {
@@ -67,7 +87,6 @@ $header-height: 85px;
 
 .global-header__right {
   background-color: $color-dark-secondary;
-  box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.50);
   z-index: 10;
   justify-content: flex-start;
   padding-left: 10px;
@@ -82,17 +101,6 @@ $header-height: 85px;
     flex: 1 0 15%;
   }
 
-  &:before {
-    content:'';
-    display: block;
-    background-color: $color-dark-secondary;
-    width: 100%;
-    top: 0;
-    height: $header-height;
-    position: absolute;
-    right: -100%;
-    margin-right: $gutter;
-  }
 }
 
 
